Finish spacing fixes on landing page

--- a/src/components/LandingBotCard/landingBotCard.css
+++ b/src/components/LandingBotCard/landingBotCard.css
@@ -1,6 +1,6 @@
 .bot-card-wrapper {
   margin: 0 auto;
-  width: 70%;
+  width: 80%;
   justify-content: space-between;
   align-items: center;
   padding: 4rem;
