--- a/src/pages/LandingPage/NewLandingPage.styles.css
+++ b/src/pages/LandingPage/NewLandingPage.styles.css
@@ -74,7 +74,7 @@
 }
 
 .sectionTwoWhatBox {
-  width: 300px;
+  width: 330px;
 }
 
 .sectionTwo {
